src/test/ui/parser/issue-87217-keyword-order/wrong-unsafe.stderr
error: expected `fn`, found keyword `unsafe`
  --> $DIR/wrong-unsafe.rs:9:8
   |
LL | extern unsafe fn test() {}
   | -------^^^^^^
   | |      |
   | |      expected `fn`
   | help: `unsafe` must come before `extern`: `unsafe extern`
   |
   = note: keyword order for functions declaration is `default`, `pub`, `const`, `async`, `unsafe`, `extern`

error: aborting due to previous error

